修复手机端列表缩进过多的问题

--- a/sign-proposal-evaluation.html
+++ b/sign-proposal-evaluation.html
@@ -44,6 +44,10 @@
                 margin-bottom: 6pt;
             }
             
+            ul, ol {
+                margin-left: 0.8em;
+            }
+            
             table {
                 font-size: 10pt;
             }
